# PicoADB

./: CMakeLists.txt  README.md  main.cpp
include/: adb.hpp  hid.hpp  usb_descriptors.h
src/: adb.cpp  hid.cpp  usb_descriptors.c
